@@ -1,5 +1,10 @@
 2008-11-14  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/bootstrap.py: do not let it display a message about
+	bootstrap modules being outdated.
+
+2008-11-14  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/__init__.py: also display slave results
 	summary at the top of the table.
 
